--- a/book/scss/scenes/park/_page-the-hole.scss
+++ b/book/scss/scenes/park/_page-the-hole.scss
@@ -1,7 +1,26 @@
 .page_the-hole {
     .foreground {
+        --gradient-height: 1.5;
         height: 100%;
-        @include background(image-url("bg_park5_2.png") no-repeat 100% 100%);
+        @include background(
+            linear-gradient(
+                0deg,
+                hsl(0, 0%, 0%) Calc(0% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.738) Calc(19% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.541) Calc(34% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.382) Calc(47% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.278) Calc(56.5% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.194) Calc(65% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.126) Calc(73% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.075) Calc(80.2% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.042) Calc(86.1% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.021) Calc(91% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.008) Calc(95.2% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0.002) Calc(98.2% / var(--gradient-height)),
+                hsla(0, 0%, 0%, 0) Calc(100% / var(--gradient-height))
+            ),
+            image-url("bg_park5_2.png") no-repeat 100% 100%
+        );
         @include background-size(100% auto);
         position: absolute;
         bottom: 0;
