--- a/book/scss/scenes/tunnels/_tunnels.scss
+++ b/book/scss/scenes/tunnels/_tunnels.scss
@@ -48,21 +48,19 @@ html {
 #tunnel {
     position: relative;
     z-index: 0; //allows us to z-index alice locally.
-    .page {
-        @include background(
-            image-url("bg-tunnel-border-left.svg") 0 0 repeat-y,
-            image-url("bg-tunnel-border-right.svg") 100% 0 repeat-y,
-            image-url("bg_tunnel-furniture.svg") center 0 no-repeat,
-            image-url("bg_tunnel-specks.png") repeat,
-            $earth
-        );
-        @include background-size(
-            percentage(100 / $max-width) auto,
-            percentage(100 / $max-width) auto,
-            percentage(1800 / $max-width) auto,
-            auto auto
-        );
-    }
+    @include background(
+        image-url("bg-tunnel-border-left.svg") 0 0 repeat-y,
+        image-url("bg-tunnel-border-right.svg") 100% 0 repeat-y,
+        image-url("bg_tunnel-furniture.svg") center 0 repeat-y,
+        image-url("bg_tunnel-specks.png") repeat,
+        $earth
+    );
+    @include background-size(
+        percentage(100 / $max-width) auto,
+        percentage(100 / $max-width) auto,
+        percentage(1800 / $max-width) auto,
+        auto auto
+    );
 }
 
 //let Alice and Cheshire hover above
