fix bg size issue in tunnel

--- a/book/scss/scenes/tunnels/_tunnels.scss
+++ b/book/scss/scenes/tunnels/_tunnels.scss
@@ -48,7 +48,24 @@ html {
 #tunnel {
     position: relative;
     z-index: 0; //allows us to z-index alice locally.
+    --gradient-height: 10;
     @include background(
+        linear-gradient(
+            0deg,
+            hsl(0, 0%, 0%) Calc(0% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.738) Calc(19% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.541) Calc(34% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.382) Calc(47% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.278) Calc(56.5% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.194) Calc(65% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.126) Calc(73% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.075) Calc(80.2% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.042) Calc(86.1% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.021) Calc(91% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.008) Calc(95.2% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0.002) Calc(98.2% / var(--gradient-height)),
+            hsla(0, 0%, 0%, 0) Calc(100% / var(--gradient-height))
+        ),
         image-url("bg-tunnel-border-left.svg") 0 0 repeat-y,
         image-url("bg-tunnel-border-right.svg") 100% 0 repeat-y,
         image-url("bg_tunnel-furniture.svg") center 0 repeat-y,
@@ -56,6 +73,7 @@ html {
         $earth
     );
     @include background-size(
+        auto auto,
         percentage(100 / $max-width) auto,
         percentage(100 / $max-width) auto,
         percentage(1800 / $max-width) auto,
