--- a/book/scss/scenes/park/_page-rabbit-appears.scss
+++ b/book/scss/scenes/park/_page-rabbit-appears.scss
@@ -1,39 +1,60 @@
 .page_rabbit-appears {
-	@include background(image-url("bg_park3.jpg") no-repeat);
-	.blink {
-		@include background(image-url("blink.svg") 0 100% no-repeat); //for animation-deprived viewers, leave eye open.
-		@include background-size(100% auto);
-		position: absolute;
-		top: 0;
-		width: 100%; height: 100%;
-		z-index: 2;
-	}
-	&.in-view .blink {
-		@include animation(scene-blink .75s steps(5) 5 -1s alternate);			
-	}
-	.rabbit {
-		@extend %imgreplace;
-		@include background(image-url("rabbit_running.png"));
-		@include background-size(100% auto);
-		width: percentage(1135/$max-width); padding-top: percentage(1254/$max-width);
-		position: absolute;
-		top: 70%;
-		left: 50%; 
-		@include translate(-50%, -50%);
-		z-index: 1;
-		.cssanimations & { 
-			left: -50%;
-		}
-	}
+    @include background(image-url("bg_park3.jpg") no-repeat);
+    .blink {
+        @include background(
+            image-url("blink.svg") 0 100% no-repeat
+        ); //for animation-deprived viewers, leave eye open.
+        @include background-size(100% auto);
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+    }
+    &.in-view .blink {
+        @include animation(scene-blink 0.75s steps(5) 5 -1s alternate);
+    }
+    .rabbit {
+        @extend %imgreplace;
+        @include background(image-url("rabbit_running.png"));
+        @include background-size(100% auto);
+        width: percentage(1135 / $max-width);
+        padding-top: percentage(1254 / $max-width);
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        @include translate(-50%, -50%);
+        z-index: 1;
+        .cssanimations & {
+            left: -50%;
+        }
+    }
+}
 
-	.csstransitions &.in-view .rabbit {
-		@include translate(percentage(($max-width+1135)/1135), -50%);
-		@include transition(transform 5s ease-in);
-	}
+@media (prefers-reduced-motion: no-preference) {
+    .page_rabbit-appears .rabbit {
+        @include translate(percentage(-($max-width + 1135)/1135), -50%);
+    }
+    .page_rabbit-appears.in-view .rabbit {
+        @include animation(scene-rabbit-run 5s ease-in both);
+    }
 }
 
 //candidate for Animation Studio sans sprite gen as SVG sprite is here already
 @include keyframes(scene-blink) {
-    0% { background-position: 0 0; }
-    100% { background-position: 0 125%; }
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 0 125%;
+    }
+}
+
+@include keyframes(scene-rabbit-run) {
+    0% {
+        @include translate(percentage(-($max-width + 1135)/1135), -50%);
+    }
+    100% {
+        @include translate(percentage(($max-width + 1135)/1135), -50%);
+    }
 }
