--- a/book/scss/scenes/park/_page-rabbit-chase.scss
+++ b/book/scss/scenes/park/_page-rabbit-chase.scss
@@ -1,42 +1,56 @@
 .page_rabbit-chase {
-	@include background(image-url("bg_park4.jpg") no-repeat);
-	.alice {
-		@include background(image-url("park4_alice.png"));
-		@include background-size(100% 100%);
-		position: absolute;
-		bottom: 0; left: 34%;
-		.csstransitions & { left: -(percentage(486/$max-width));}
-		width: percentage(486/$max-width); padding-top: percentage(396/$max-width);	
-	}
-	.rabbit1 {
-		@include background(image-url("park4_rabbit1.png"));
-		@include background-size(100% 100%);
-		position: absolute;
-		top: 33%; left: 46%;
-		width: percentage(171/$max-width); padding-top: percentage(497/$max-width);
-	}
-	.rabbit2 {
-		@include background(image-url("park4_rabbit2.png"));
-		@include background-size(100% 100%);
-		position: absolute;
-		bottom: 0; left: 70%;
-		.csstransitions & { left: -(percentage(415/$max-width));}
-		width: percentage(415/$max-width); padding-top: percentage(381/$max-width);
-	}
-	.csstransitions &.in-view {
-		// once in view, the rabbit should run into the distance in frame 2
-		.rabbit1 {
-			@include transition(transform 2s ease-in);
-			@include scale(.5, .5, 0);
-		}
-		// and in frame three they should both runn off page after a small delay for the above to finish
-		.rabbit2 {
-			@include transition(transform 3s ease-in 1.5s);
-			@include translate(percentage(($max-width+450)/415), 0);
-		}
-		.alice {
-			@include transition(transform 3s ease-in 3s);
-			@include translate(percentage(($max-width+500)/486), 0);
-		}
-	}
+    @include background(image-url("bg_park4.jpg") no-repeat);
+    .alice {
+        @include background(image-url("park4_alice.png"));
+        @include background-size(100% 100%);
+        position: absolute;
+        bottom: 0;
+        left: 34%;
+        .csstransitions & {
+            left: -(percentage(486 / $max-width));
+        }
+        width: percentage(486 / $max-width);
+        padding-top: percentage(396 / $max-width);
+    }
+    .rabbit1 {
+        @include background(image-url("park4_rabbit1.png"));
+        @include background-size(100% 100%);
+        position: absolute;
+        top: 33%;
+        left: 46%;
+        width: percentage(171 / $max-width);
+        padding-top: percentage(497 / $max-width);
+    }
+    .rabbit2 {
+        @include background(image-url("park4_rabbit2.png"));
+        @include background-size(100% 100%);
+        position: absolute;
+        bottom: 0;
+        left: 70%;
+        .csstransitions & {
+            left: -(percentage(415 / $max-width));
+        }
+        width: percentage(415 / $max-width);
+        padding-top: percentage(381 / $max-width);
+    }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    // once in view, the rabbit should run into the distance in frame 2
+    .page_rabbit-chase.in-view .rabbit1,
+    .page_rabbit-chase.viewed .rabbit1 {
+        @include transition(transform 2s ease-in);
+        @include scale(0.5, 0.5, 0);
+    }
+    // and in frame three they should both runn off page after a small delay for the above to finish
+    .page_rabbit-chase.in-view .rabbit2,
+    .page_rabbit-chase.viewed .rabbit2 {
+        @include transition(transform 3s ease-in 1.5s);
+        @include translate(percentage(($max-width + 450)/415), 0);
+    }
+    .page_rabbit-chase.in-view .alice,
+    .page_rabbit-chase.viewed .alice {
+        @include transition(transform 3s ease-in 3s);
+        @include translate(percentage(($max-width + 500)/486), 0);
+    }
 }
