--- a/book/scss/scenes/wonderland/_crash.scss
+++ b/book/scss/scenes/wonderland/_crash.scss
@@ -1,3 +1,9 @@
 .page_crash-landing {
-	@include background(image-url("bg_wonderland1.jpg") no-repeat);
+    @include background(image-url("bg_wonderland1.jpg") no-repeat);
+    overflow: visible !important;
+}
+
+.scene-wonderland {
+    overflow: visible !important;
+    transform-origin: center center;
 }
